update to main form